--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -344,7 +344,7 @@ MSG_AD_QUERY='';MSG_ALPHA_DESC='This language is still in early stages of develo
         </script>
 
         <div id="gt-form-c">
-            <form action
+          <form action="<%= root_url %>"
             class="mac-webkit" enctype="application/x-www-form-urlencoded" id=
             "gt-form" method="post" name="text_form">
                 <div id="gt-appbar">
