--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -703,7 +703,7 @@ MSG_AD_QUERY='';MSG_ALPHA_DESC='This language is still in early stages of develo
                                                         "result_box">
                                                         <% if @question %>
                                                           <% @question.answers.each do |answer| %>
-                                                            <% if answer.right? %>
+                                                            <% if answer.right? == 't' %>
                                                               <span class="hps" style="color:red"><%= answer.text %></span>
                                                             <% else %>
                                                               <span class="hps"><%= answer.text %></span>
