--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -698,7 +698,17 @@ MSG_AD_QUERY='';MSG_ALPHA_DESC='This language is still in early stages of develo
                                                             "tts"></audio>
                                                             </div>
                                                       <span class="short_text" id="result_box">
-                                                        <% if @question %><% @question.answers.each do |answer| %><span class="hps" style='font-size: 16px'><%= raw answer.text %><% if answer.correct? %><%= raw '*' %><% end %></span><br/><% end %><% end %>
+                                                        <% if @question %>
+                                                          <% @question.answers.each do |answer| %>
+                                                            <div class="hps" style='font-size: 16px'>
+                                                              <% if answer.correct? %>
+                                                                <span>*</span>
+                                                              <% end %>
+                                                              <%= raw answer.text %>
+                                                            </span>
+                                                            <br/>
+                                                          <% end %>
+                                                        <% end %>
                                                       </span>
                                                     </div>
                                                 </div>
